--- a/app/src/main/res/layout/activity_demo_dialog_sale30_percent_yearly.xml
+++ b/app/src/main/res/layout/activity_demo_dialog_sale30_percent_yearly.xml
@@ -5,18 +5,15 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue_6477FF"
-    tools:context=".ui.dialogweekly.DemoDialogSale30percentWeeklyActivity">
+    tools:context=".ui.dialogyearly.DemoDialogSale30percentYearlyActivity">
 
-    <Button
-        android:id="@+id/btnShowDialogSale30PercentWeekly"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/btnShowDialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
-        android:text="Show dialog sale 30% weekly"
+        android:layout_marginTop="120dp"
+        android:text="@string/show_dialog"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
