--- a/app/src/main/res/layout/bottom_sheet_paywall_50percent_weekly.xml
+++ b/app/src/main/res/layout/bottom_sheet_paywall_50percent_weekly.xml
@@ -6,8 +6,8 @@
     android:background="@drawable/bg_bottom_sheet_paywall_50percent"
     android:padding="@dimen/_14sdp">
 
-    <TextView
-        android:id="@+id/tv_title"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_17sdp"
@@ -20,132 +20,116 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/frameLayoutContainerDiscount"
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txtPriceWeekly"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:fontFamily="@font/funnel_sans_medium"
+        android:text="@string/_8_99_week"
+        android:textColor="@color/color_EAF5F8"
+        app:layout_constraintEnd_toStartOf="@+id/btnOff50"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnOff50"
+        android:layout_width="@dimen/_50sdp"
+        android:layout_height="@dimen/_18sdp"
+        android:layout_marginStart="@dimen/_6sdp"
+        android:background="@drawable/bg_button_off_50"
+        android:fontFamily="@font/funnel_sans_bold"
+        android:text="@string/off_50"
+        android:textColor="@color/color_EAF5F8"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/txtPriceWeekly"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtPriceWeekly"
+        app:layout_constraintTop_toTopOf="@+id/txtPriceWeekly" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txtPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:fontFamily="@font/funnel_sans_bold"
+        android:text="@string/_3_99"
+        android:textColor="@color/color_EAF5F8"
+        android:textSize="@dimen/_37sdp"
+        app:layout_constraintEnd_toStartOf="@+id/txtWeek"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtPriceWeekly" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txtWeek"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_4sdp"
+        android:fontFamily="@font/funnel_sans_bold"
+        android:text="@string/week"
+        android:textColor="@color/color_EAF5F8"
+        android:textSize="@dimen/_23sdp"
+        app:layout_constraintBottom_toBottomOf="@+id/txtPrice"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtPrice"
+        app:layout_constraintTop_toTopOf="@+id/txtPrice" />
+
+    <View
+        android:id="@+id/frameOverlayLoading"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_68sdp"
-        android:layout_marginTop="12dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginBottom="@dimen/_5sdp"
+        android:background="@drawable/bg_frame_overlay_loading"
+        android:elevation="@dimen/_3sdp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/btnClaimOfferLoading"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title">
+        app:layout_constraintTop_toBottomOf="@id/txtTitle" />
 
-        <LinearLayout
-            android:id="@+id/layoutContainWeek"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/_20sdp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/funnel_sans_medium"
-                android:text="@string/_8_99_week"
-                android:textColor="@color/color_EAF5F8"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="@dimen/_50sdp"
-                android:layout_height="@dimen/_18sdp"
-                android:layout_marginStart="@dimen/_6sdp"
-                android:background="@drawable/bg_button_off_50"
-                android:fontFamily="@font/funnel_sans_bold"
-                android:text="@string/off_50"
-                android:textColor="@color/color_EAF5F8"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="@+id/view5"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layoutContainWeek">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/funnel_sans_bold"
-                android:text="@string/_3_99"
-                android:textColor="@color/color_EAF5F8"
-                android:textSize="@dimen/_37sdp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/funnel_sans_bold"
-                android:text="@string/week"
-                android:textColor="@color/color_EAF5F8"
-                android:textSize="@dimen/_23sdp" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/view5"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/bg_frame_overlay_loading"
-            android:elevation="@dimen/_3sdp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnClaimOffer"
         android:layout_width="0dp"
         android:layout_height="@dimen/_42sdp"
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_button_claim_offer"
+        android:text="@string/claim_offer"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_13sdp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/frameLayoutContainerDiscount">
+        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="@dimen/_17sdp"
-            android:layout_height="@dimen/_17sdp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnClaimOfferLoading"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_42sdp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/bg_button_claim_offer"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/claim_offer"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_13sdp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/textView5"
+    <ProgressBar
+        android:id="@+id/progressBarLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="4dp"
+        android:indeterminateTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="@id/btnClaimOfferLoading"
+        app:layout_constraintEnd_toEndOf="@id/btnClaimOfferLoading"
+        app:layout_constraintStart_toStartOf="@id/btnClaimOfferLoading"
+        app:layout_constraintTop_toTopOf="@id/btnClaimOfferLoading" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txtPriceDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_9sdp"
@@ -158,7 +142,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnClaimOffer" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTermsAndPrivacy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -172,5 +156,55 @@
         android:textSize="@dimen/_7sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPriceDescription" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txtCouldntLoadInformation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_74sdp"
+        android:fontFamily="@font/funnel_sans_semi_bold"
+        android:text="@string/we_couldnt_load_the_information"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_12sdp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtTitle" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txtTryAgain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:fontFamily="@font/funnel_sans_regular"
+        android:text="@string/try_again"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_10sdp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="@+id/txtCouldntLoadInformation"
+        app:layout_constraintStart_toStartOf="@+id/txtCouldntLoadInformation"
+        app:layout_constraintTop_toBottomOf="@+id/txtCouldntLoadInformation" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/viewGroupLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:constraint_referenced_ids="progressBarLoading,frameOverlayLoading,btnClaimOfferLoading" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/viewGroupFailed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:constraint_referenced_ids="txtCouldntLoadInformation,txtTryAgain" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/viewGroupContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="txtPrice,txtPriceWeekly,btnClaimOffer,txtWeek,btnOff50,txtPriceDescription" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
