--- a/app/src/main/res/drawable/bg_switch_toggle_selected.xml
+++ b/app/src/main/res/drawable/bg_switch_toggle_selected.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/color_transparent" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/color_EAF5F8"/>
+    <corners android:radius="@dimen/_5sdp"/>
+
 </shape>
