--- a/app/src/main/res/layout/activity_demo_dialog_sale30_percent_yearly.xml
+++ b/app/src/main/res/layout/activity_demo_dialog_sale30_percent_yearly.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
+        android:background="@color/blue_6477FF"
         android:text="@string/show_dialog"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
