--- a/app/src/main/res/drawable/bg_button_try_for_free_loading.xml
+++ b/app/src/main/res/drawable/bg_button_try_for_free_loading.xml
@@ -2,8 +2,8 @@
 <shape
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-<corners android:radius="@dimen/_9sdp"/>
-    <solid android:color="@color/color_0F1E47"/>
+    <corners android:radius="@dimen/_9sdp"/>
+    <solid android:color="@color/color_5F5F5F"/>
     <padding android:right="@dimen/_12sdp"
         android:bottom="@dimen/_12sdp"
         android:top="@dimen/_12sdp"
