--- a/app/src/main/res/drawable/bg_switch_toggle_unselected.xml
+++ b/app/src/main/res/drawable/bg_switch_toggle_unselected.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/color_EAF5F8"/>
-    <corners android:radius="@dimen/_5sdp"/>
-    <padding android:bottom="@dimen/_12sdp"
-        android:top="@dimen/_12sdp"
-        android:left="@dimen/_12sdp"
-        android:right="@dimen/_12sdp"
-        />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+android:shape="rectangle">
+<solid android:color="@color/color_transparent" />
 </shape>
