--- a/app/src/main/res/layout/activity_paywall_onboarding.xml
+++ b/app/src/main/res/layout/activity_paywall_onboarding.xml
@@ -36,9 +36,7 @@
             android:id="@+id/switchBtn"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="@dimen/_54sdp"
             android:layout_marginTop="@dimen/_48sdp"
-            android:layout_marginEnd="@dimen/_54sdp"
             android:background="@drawable/bg_switch_yearly_weekly"
             android:orientation="horizontal"
             android:padding="@dimen/_3sdp"
@@ -46,18 +44,19 @@
             app:layout_constraintDimensionRatio="220:34"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.61">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/btnYearly"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_toggle_switch"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_switch_toggle_selected"
                 android:fontFamily="@font/readex_pro_regular"
                 android:gravity="center"
                 android:text="@string/yearly"
                 android:textColor="@color/color_0F1E47"
-                android:textSize="@dimen/_10sdp"
+                android:textSize="@dimen/_11sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnWeekly"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -70,25 +69,26 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/btnWeekly"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_4sdp"
-                android:background="@drawable/bg_toggle_switch"
+                android:background="@drawable/bg_switch_toggle_unselected"
                 android:fontFamily="@font/readex_pro_regular"
                 android:gravity="center"
                 android:text="@string/weekly"
                 android:textColor="@color/color_EAF5F8"
-                android:textSize="@dimen/_10sdp"
+                android:textSize="@dimen/_11sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/btnYearly"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.46"
+                app:layout_constraintWidth_percent="0.48"
                 app:selectedSubscriptionPlan='@{subscriptionPlan}'
                 app:targetSubscriptionPlan='@{SubscriptionPlan.Weekly}' />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/btnClose"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginEnd="@dimen/_14sdp"
@@ -99,7 +99,7 @@
             app:layout_constraintWidth_percent="0.044"
             app:srcCompat="@drawable/ic_cancel" />
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -112,7 +112,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/switchBtn" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img1"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -124,6 +124,7 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txtIntroduction"
+            stateToggle='@{toggleState}'
             stateTrial='@{stateTrial}'
             subscriptionPlan='@{subscriptionPlan}'
             android:layout_width="wrap_content"
@@ -168,7 +169,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/_12sdp"
+            android:checked="true"
             app:layout_constraintBottom_toBottomOf="@+id/bgFreeTrial"
+            app:layout_constraintDimensionRatio="34:16"
             app:layout_constraintEnd_toEndOf="@+id/bgFreeTrial"
             app:layout_constraintTop_toTopOf="@+id/bgFreeTrial"
             app:thumbTint="@drawable/thumb_tint_switch_trial"
@@ -184,6 +187,7 @@
             android:fontFamily="@font/readex_pro_bold"
             android:gravity="center"
             android:text="@string/try_for_free"
+            android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="@dimen/_13sdp"
             app:layout_constraintDimensionRatio="H,320:54"
@@ -192,17 +196,26 @@
             app:layout_constraintStart_toStartOf="@+id/bgFreeTrial"
             app:layout_constraintTop_toBottomOf="@+id/bgFreeTrial" />
 
-        <ProgressBar
-            android:id="@+id/processBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility='@{stateTrial == StateTrial.Loading ? View.VISIBLE : View.GONE}'
-            app:layout_constraintBottom_toBottomOf="@+id/btnTryForFree"
-            app:layout_constraintEnd_toEndOf="@+id/btnTryForFree"
-            app:layout_constraintStart_toStartOf="@+id/btnTryForFree"
-            app:layout_constraintTop_toTopOf="@+id/btnTryForFree" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/btnTryForFreeNotEligible"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/_12sdp"
+            android:background="@drawable/bg_button_try_for_free"
+            android:fontFamily="@font/readex_pro_bold"
+            android:gravity="center"
+            android:text="@string/continue1"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_13sdp"
+            android:visibility='@{stateTrial == StateTrial.NotEligible ? View.VISIBLE : View.GONE}'
+            app:layout_constraintDimensionRatio="H,320:54"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtIntroduction"
+            app:layout_constraintWidth_percent="0.88" />
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/txtTermsAndPoliciesNotEligible"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_9sdp"
@@ -214,10 +227,40 @@
             android:text="@string/by_continuing_you_agree_to_our_terms_and_privacy_policies_subscription_gives_you_access_to_v9compress_s_premium_features_all_ads_will_be_removed_subscription_plans_are_automatically_renewed_and_can_be_canceled_anytime_in_subscriptions_on_google_play_you_will_not_be_charged_if_subscription_is_canceled_before_trial_period_ends_subscription_is_not_required_to_use_v9compress"
             android:textColor="@color/color_4D5A68"
             android:textSize="@dimen/_7sdp"
+            android:visibility='@{stateTrial == StateTrial.NotEligible ? View.VISIBLE : View.GONE}'
+            app:layout_constraintEnd_toEndOf="@+id/btnTryForFreeNotEligible"
+            app:layout_constraintStart_toStartOf="@+id/btnTryForFreeNotEligible"
+            app:layout_constraintTop_toBottomOf="@+id/btnTryForFreeNotEligible" />
+
+        <ProgressBar
+            android:id="@+id/processBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="@dimen/_3sdp"
+            android:indeterminateTint="@color/color_FFFFFF66"
+            android:visibility='@{stateTrial == StateTrial.Loading ? View.VISIBLE : View.GONE}'
+            app:layout_constraintBottom_toBottomOf="@+id/btnTryForFree"
+            app:layout_constraintEnd_toEndOf="@+id/btnTryForFree"
+            app:layout_constraintStart_toStartOf="@+id/btnTryForFree"
+            app:layout_constraintTop_toTopOf="@+id/btnTryForFree" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/txtTermsAndPolicies"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_9sdp"
+            android:fontFamily="@font/readex_pro_regular"
+            android:gravity="center"
+            android:lineHeight="@dimen/_10sdp"
+            android:paddingHorizontal="@dimen/_15sdp"
+            android:paddingVertical="@dimen/_6sdp"
+            android:text="@string/by_continuing_you_agree_to_our_terms_and_privacy_policies_subscription_gives_you_access_to_v9compress_s_premium_features_all_ads_will_be_removed_subscription_plans_are_automatically_renewed_and_can_be_canceled_anytime_in_subscriptions_on_google_play_you_will_not_be_charged_if_subscription_is_canceled_before_trial_period_ends_subscription_is_not_required_to_use_v9compress"
+            android:textColor="@color/color_4D5A68"
+            android:textSize="@dimen/_7sdp"
+            android:visibility='@{stateTrial == StateTrial.NotEligible ? View.INVISIBLE : View.VISIBLE}'
             app:layout_constraintEnd_toEndOf="@+id/btnTryForFree"
             app:layout_constraintStart_toStartOf="@+id/btnTryForFree"
             app:layout_constraintTop_toBottomOf="@+id/btnTryForFree" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
